# website

./: .gitignore  .travis.yml  CI.Dockerfile  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  index.scss  rust-toolchain.toml  sitemap.xml  website.nginx.conf
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: artifact_upload.yml  build.yml  ci.yaml  ci.yml  clippy.yml  docker_build.yml  docker_push.yml  release-latest.yml  release-tagged.yml  release.yml
css/: fonts.css
scss/: brands.scss  fonts.scss  icons.scss  root.scss
src/: contact.rs  footer.rs  header.rs  lib.rs  main.rs  navigation.rs  router.rs  util.rs
src/common/components/: footer.rs  header.rs  mod.rs  nav.rs
src/components/: button.rs  callout.rs  carousel.rs  color_link.rs  construction.rs  desktop_header.rs  divider.rs  email_button.rs  footer.rs  hyperlink.rs  iframe.rs  image.rs  mod.rs  nav_link.rs  navigation.rs  pfp.rs  preformatted.rs  spinner.rs  tabs.rs  tap_target.rs  theme_switcher.rs  transition.rs
src/components/hyperlink/: external_link.rs  internal_link.rs  link.rs  mod.rs
src/components/icons/: icon.rs  mask.rs  mod.rs
src/components/links/: external_link.rs  internal_link.rs  mod.rs
src/compounds/: contact.rs
src/hooks/: mod.rs  use_theme.rs
src/page_components/: home.rs  not_found.rs  resume.rs
src/pages/: home.rs  mod.rs  not_found.rs  resume.rs  server_error.rs
src/pages/construction/: mod.rs  page.rs
src/pages/contact/: mod.rs
src/pages/contributions/: mod.rs
src/pages/cv/: mod.rs
src/pages/home/: homepage.rs  mod.rs
src/pages/not_found/: mod.rs
src/pages/projects/: mod.rs
src/pages/research/: mod.rs
src/pages/resume/: mod.rs  resume_page.rs
src/pages/server_error/: mod.rs
src/pages/sponsor/: mod.rs
src/style/: color.rs  colors.rs  global.rs  icon.rs  mod.rs  theme.rs  theme_choice.rs  theme_context.rs  theme_provider.rs  themes.rs
src/style/color/: color.rs  opaque.rs  transparent.rs
src/style/colors/: color.rs  mod.rs  model.rs  opaque.rs
src/style/icons/: icon.rs  mask.rs
src/style/themes/: custom_themes.rs  dark_theme.rs  light_theme.rs  mod.rs  theme.rs  theme_choice.rs  theme_context.rs  theme_provider.rs
src/themes/: colors.rs  mod.rs  theme.rs  theme_choice.rs  theme_context.rs  theme_kind.rs  theme_provider.rs
static/: robots.txt  site.webmanifest  sitemap.xml
static/fonts/: README.md
static/fonts/Lego/: LICENSE
terraform/: .terraform.lock.hcl  main.tf  variables.tf
