[package]
name = "website"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# link time optimization using using whole-program analysis
lto = true
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size (aggressive)
opt-level = 'z'
# Strip debug symbols and info
strip = "debuginfo"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
stylist = { version = "0.13.0", features = ["yew_integration"] }
themer = { git = "https://github.com/simbleau/themer", version = "0.3" }
hex_color = "3.0.0"
url = "2.5.0"
wasm-bindgen = "0.2.92"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
serde = "1.0.198"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
console_log = "1.0.0"
once_cell = "1.19.0"
web-sys = { version = "0.3.69", features = [
  "CssStyleDeclaration",
  "Screen",
  "Window",
  "HtmlInputElement",
  "Storage",
  "Location",
  "Element",
  "Navigator",
  "Clipboard",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
