[package]
name = "website"
description = "Personal website of Spencer C. Imbleau"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/website"
publish = false
# FIXME: After https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target
# forced-target = "wasm32-unknown-unknown"

# In the future, hopefully trunk supports `--profile web-profile`,
# and we can rename this profile.
# See: https://github.com/trunk-rs/trunk/issues/605
[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
strip = "debuginfo"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
stylist = { version = "0.13.0", features = ["yew_integration"] }
hex_color = "3.0.0"
url = "2.5.0"
wasm-bindgen = "0.2.92"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
gloo-storage = "0.3.0"
serde = "1.0.198"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
console_log = "1.0.0"
once_cell = "1.19.0"
web-sys = { version = "0.3.69", features = [
  "CssStyleDeclaration",
  "Screen",
  "Window",
  "HtmlInputElement",
  "Storage",
  "Location",
  "Element",
  "Navigator",
  "Clipboard",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
